Fixes line wrap issue for about me content, adds blur background for nav buttons, adds margin to bottom of content for scolability.

--- a/src/modules/about-me/about-me/about-me.component.scss
+++ b/src/modules/about-me/about-me/about-me.component.scss
@@ -75,47 +75,52 @@
             margin-left: 60px;
             margin-right: 30px;
 
-            p {
+            .content {
                 color: white;
 
                 font-size: 1.75rem;
+
+                white-space: pre-wrap;
+
+                margin-top: 30px;
+                margin-bottom: 200px;
+            }
+        }
+
+        .ticker-buttons {
+            position: fixed;
+            left: 50%;
+            bottom: 50px;
+
+            background-color: rgba(50, 50, 50, 0.3); 
+            backdrop-filter: blur(10px); 
+            padding: 10px; 
+            border-radius: 10px;
+
+            button {
+                all: unset;
+
+                padding: 15px;
+
+            
+
+                img {
+                    width: 25px;
+                    opacity: 0.5;
+                }
             }
 
-            .ticker-buttons {
-                position: absolute;
-
-                width: 100%;
-                height: 100%;
-
-                display: flex;
-                justify-content: space-around;
-                align-items: center;
-
-                margin-top: 50px;
-                margin-bottom: 100px;
-
-                button {
-                    all: unset;
-
-                    padding: 15px;
-
-                
-
-                    img {
-                        width: 25px;
-                        opacity: 0.5;
-                    }
-                }
-
-                button:hover {
+            button:hover {
+                img {
+                    opacity: 1;
                     cursor: pointer;
                 }
+            }
 
-                button:active {
-                    img {
-                        filter: brightness(0) saturate(100%) invert(74%) sepia(52%) saturate(675%) hue-rotate(-12deg) brightness(104%) contrast(101%);
-                        opacity: 1;
-                    }
+            button:active {
+                img {
+                    filter: brightness(0) saturate(100%) invert(74%) sepia(52%) saturate(675%) hue-rotate(-12deg) brightness(104%) contrast(101%);
+                    opacity: 1;
                 }
             }
         }
